--- a/package.json
+++ b/package.json
@@ -8,26 +8,19 @@
     "lite": "lite-server"
   },
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.2",
-    "@angular/compiler":  "2.0.0-rc.2",
-    "@angular/core":  "2.0.0-rc.2",
-    "@angular/http":  "2.0.0-rc.2",
-    "@angular/platform-browser":  "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.2",
-    "@angular/router":  "2.0.0-rc.2",
-    "@angular/router-deprecated":  "2.0.0-rc.2",
-    "@angular/upgrade":  "2.0.0-rc.2",
-
-    "core-js": "^2.4.0",
+    "bootstrap": "^3.3.6",
+    "react": "^15.1.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12",
-
-    "angular2-in-memory-web-api": "0.0.12",
-    "bootstrap": "^3.3.6"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-file-include": "^0.13.7",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-less": "^3.1.0",
     "lite-server": "^2.2.0"
   },
   "repository": {
