--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
+    "cradle": "^0.7.1",
     "express": "^4.14.0",
     "react": "^15.1.0",
     "reflect-metadata": "0.1.3",
@@ -23,6 +24,9 @@
     "gulp-file-include": "^0.13.7",
     "gulp-imagemin": "^3.0.1",
     "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
     "lite-server": "^2.2.0"
   },
   "repository": {
