--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cradle": "^0.7.1",
     "express": "^4.14.0",
     "react": "^15.1.0",
+    "react-router": "^2.5.2",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
@@ -27,7 +28,8 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
-    "lite-server": "^2.2.0"
+    "lite-server": "^2.2.0",
+    "react-router": "^2.5.2"
   },
   "repository": {
     "type": "git",
