--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.1.0",
     "react-router": "^2.5.2",
     "reflect-metadata": "0.1.3",
+    "reflux": "^0.4.1",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.12"
   },
