--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bootstrap": "^3.3.6",
     "cradle": "^0.7.1",
     "express": "^4.14.0",
-    "react": "^15.1.0",
     "react-router": "^2.5.2",
     "reflect-metadata": "0.1.3",
     "reflux": "^0.4.1",
@@ -20,6 +19,9 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -29,8 +31,13 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
+    "gulp-webpack": "^1.5.0",
+    "jquery": "^2.2.x",
     "lite-server": "^2.2.0",
-    "react-router": "^2.5.2"
+    "react-dom": "^15.3.1",
+    "react-router": "^2.5.2",
+    "react": "^15.1.0",
+    "webpack": "^1.13.2"
   },
   "repository": {
     "type": "git",
